---------------------------------------------------------------------------------------------------
Version: 3.18.11
Date: 2020.XX.XX
  Bugfixes:
    - Fixed multi-result recipe localisations beeing broken in some cases
---------------------------------------------------------------------------------------------------
Version: 3.18.10
Date: 2020.05.01
  Changes:
    - Removed hard crash from omni.lib.add_prerequisite(tech, req) if tech does not exist
    - Added an additional check if req exists to prevent crashes with mods removing techs
    - Recipe standardisation no longer sets icons() for single result recipes
  Bugfixes:
    - Fixed omni inserters beeing more than twice as loud as vanilla inserters
---------------------------------------------------------------------------------------------------
Version: 3.18.9
Date: 2020.04.27
  Bugfixes:
    - Fixed Recipe standardisation changing multi result recipe icons in some cases
---------------------------------------------------------------------------------------------------
Version: 3.18.8
Date: 2020.04.26
  Features:
    - Added a steam powered Omnitractor and Omniphlog
  Bugfixes:
    - Fixed Recipe standardisation not updating icons & localised names in some edge cases
    - Optimised small icon addition
    - Fixed tinting on omnic water recipes
---------------------------------------------------------------------------------------------------
Version: 3.18.7
Date: 2020.04.20
  Bugfixes:
    - Fixed Recipe standardisation not working correctly on some edge cases
---------------------------------------------------------------------------------------------------
Version: 3.18.6
Date: 2020.04.19
  Features:
    - Added a function to set entity Output Slots
  Bugfixes:
    - Fixed that Furnace output slots default to 7 like assemblers
    - Fixed Recipe standardisation causing invalid main products
    - Fixed localisations not working in some cases