@@ -17,9 +17,6 @@ local burnerEntities = {
 	"burner-omniphlog",
 	"burner-omnitractor",
 	"burner-omniplant",
-	"burner-omni-furnace",
-	"burner-omni-furnace-1",
-	"burner-omni-furnace-2",
 	"burner-ore-crusher",
 	"mixing-furnace",
 	"chemical-boiler",
