@@ -5,6 +5,7 @@ Date: 2020.XX.XX
     - Added Miniloader support
   Changes:
     - Added an item subgroup for each tier of omnified fuel
+    - Omnifurnace 2 now accepts chemical fuels
   Bugfixes:
     - Fixed that certain Omnified Fuels were not craftable
 ---------------------------------------------------------------------------------------------------
