@@ -3,6 +3,7 @@ Version: 3.18.11
 Date: 2020.XX.XX
   Bugfixes:
     - Fixed multi-result recipe localisations beeing broken in some cases
+    - Fixed setFuelCategory() not working for inserters
 ---------------------------------------------------------------------------------------------------
 Version: 3.18.10
 Date: 2020.05.01
